--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/feedback.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/feedback.html
@@ -23,7 +23,7 @@
 
 <div class="container">
     <div class="row text-center">
-        <div class="col-lg-8 offset-lg-2 text-left">
+        <div class="col-lg-8 offset-lg-2 text-left" id="feedbak_container">
             <hr>
             {% for feedback in feedbacks %}
             <h4>Etapa: {{ feedback.stage.name }}</h4>
