--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/meetings.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/meetings.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="row centered">
         <div class="col-lg-4 offset-lg-4">
-            <a  class="btn btn-block btn-outline-success" href="{% url 'new-meeting' subject.id %}">Marcar nova runião</a>
+            <a  class="btn btn-block btn-success" href="{% url 'new-meeting' subject.id %}">Marcar nova runião</a>
         </div>
     </div>
 </div>
