--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/group-files.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/group-files.html
@@ -19,25 +19,29 @@
 
 <div class="container">
     <div class="row centered">
-        <div class="col-lg-8 offset-lg-2">
+        <div class="col-lg-8 offset-lg-2" id="group_file_container">
         
  
             <br>
             {% for member in group.members.all %}
+            <div id="group_file_member_download_list">
                 <h4>{{ member }}</h4>    
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <input type="hidden" name="submission" value={{ member.id|stringformat:"i" }}>
                     <button class="btn btn-primary" type="submit">Download</button>
                 </form>
+            </div>
             {% endfor %}
-
-            <h4 class="alert">Fazer novo upload? (aviso, irá substituir a sua submissão anterior)</h4>
+                <hr>
+            <h4 class="text-danger" style="margin-bottom: 10px;">Fazer novo upload? (aviso, irá substituir a sua submissão anterior)</h4>
             <form class="form-control-file" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <input class="form-control-file" type="file" required="" name="myfile"><br>
                 <input class="form-control-file" type="hidden" name="upload" value={{ user.id|stringformat:"i" }}>
-                <button class="btn" type="submit">Upload/Update</button>
+                <div class="text-center">
+                    <button class="btn btn-primary" type="submit">Upload/Update</button>
+                </div>
             </form>
             <br>
 
