pesquisa de utilizador para chat funciona

--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/login/schedule.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/login/schedule.html
@@ -13,7 +13,11 @@
 <div class="container">
     <div class="row text-left">
         <div class="col-lg-1">
-            <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'logged-student' %}">Back</a>
+            {% if user.is_student %}
+                <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'logged-student' %}">Back</a>
+                {% else %}
+                <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'logged-teacher' %}">Back</a>
+                {% endif %}
         </div>
     </div>
 </div>
