--- a/PTI/Semanas/semana_12/Floofy/floofy_project/login/static/css/main.css
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/login/static/css/main.css
@@ -4,18 +4,35 @@
     background: linear-gradient(to right, #babadb, #bfcde6, #bcbdcf); 
 } */
 
-body{
-    background-color: #dad8d8;
+/* body{
+    background-color: #c7c6c6;
     color: #555;
 
     -webkit-font-smothing: antialiased;
     -webkit-overflow-scrolling: touch;
     
+} */
+html body{
+    height: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background: rgb(175,172,172);
+    background: linear-gradient(103deg, rgba(151, 150, 150, 0.919) 0%, rgba(201,198,203,1) 12%, rgba(219,217,219,1) 27%, rgba(219,217,219,1) 40%, rgba(219,217,219,1) 49%, rgba(219,217,219,1) 59%, rgba(219,217,219,1) 67%, rgba(201,198,203,1) 84%, rgba(153, 152, 152, 0.925) 100%) fixed;
+    background: -moz-linear-gradient(103deg, rgba(151, 150, 150, 0.919) 0%, rgba(201,198,203,1) 12%, rgba(219,217,219,1) 27%, rgba(219,217,219,1) 40%, rgba(219,217,219,1) 49%, rgba(219,217,219,1) 59%, rgba(219,217,219,1) 67%, rgba(201,198,203,1) 84%, rgba(153, 152, 152, 0.925) 100%) fixed;
+   
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
-
-
-
+/* Page Title*/
+#area_student_title{
+    background-color: rgb(218, 218, 218);
+    border-radius: 5px;
+    
+}
 
 
 /* FOOTER */
