--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/forum/post_form.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/forum/post_form.html
@@ -19,7 +19,7 @@
    
 <div class="container">
     <div class="row">
-        <div class="col-lg-6 offset-lg-3 text-center">
+        <div class="col-lg-6 offset-lg-3 text-center" id="forum_create">
             <div class="content-section">
                 <form method="POST">
                     {% csrf_token %}
@@ -28,7 +28,7 @@
                         {{ form }}
                     </fieldset>
                     <div class="form-group text-center">
-                        <button class="btn btn-outline-primary" type="submit">Publicar!</button>
+                        <button class="btn btn-primary" type="submit">Publicar!</button>
                     </div>
                 </form>
             </div>
