--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/login/dayschedule.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/login/dayschedule.html
@@ -18,7 +18,7 @@
 <br>
 <br>
 
-<div class="container">
+<div class="container" id="chedule_contaioner">
     <table class="table table-striped">
         <thead>
           <tr>
