--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/meetings.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/meetings.html
@@ -27,9 +27,9 @@
 <br>
 {% if meetings %}
     {% for meeting in meetings %}
-        <div class="container">
+        <div class="container" id="meetigs_list_container">
             <div class="row centered">
-                <h4>Reunião marcada: <small class="text-muted">{{ meeting.owner.firstname }}</small> </h4> <br>
+                <h4 style="padding-left: 15px;">Reunião marcada: <small class="text-muted">{{ meeting.owner.firstname }}</small> </h4> <br>
 
             </div>
             <div class="row centered">
@@ -39,6 +39,7 @@
                 </div>
             </div>
         </div>
+        <br>
 
     {% endfor %}
 {% endif %}
