--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/forum/post_confirm_delete.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/forum/post_confirm_delete.html
@@ -28,7 +28,7 @@
                             <legend class="border-bottom mb-4">Eliminar Post</legend>
                         </div>
                         
-                        <h2><samp> Tem certezxa q quere fazer isso .|. "{{ object.title }}"</samp></h2>
+                        <h2><samp> Tem certeza que quer eliminar o post: "{{ object.title }}"</samp></h2>
                     </fieldset>
                     <div class="form-group text-center">
                         <button class="btn btn-outline-danger" type="submit">Sim, Eliminar!</button>
