--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/group-files.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/mygroup/group-files.html
@@ -21,14 +21,6 @@
     <div class="row centered">
         <div class="col-lg-8 offset-lg-2" id="group_file_container">
             
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="alert alert-success">
-                        <a href='#' class='close' data-dismiss='alert' aria-label='close'>&times;</a>
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}
             <br>
             {% for member in group.members.all %}
             <div id="group_file_member_download_list">
@@ -42,7 +34,7 @@
             {% endfor %}
                 <hr>
             <h4 class="text-danger" style="margin-bottom: 10px;">Fazer novo upload? (aviso, irá substituir a sua submissão anterior)</h4>
-            <form class="form-control-file upload_form" method="post" enctype="multipart/form-data">
+            <form class="form-control-file" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <input class="form-control-file" type="file" required="" name="myfile"><br>
                 <input class="form-control-file" type="hidden" name="upload" value={{ user.id|stringformat:"i" }}>
@@ -54,10 +46,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
-
-{% block script %}
-<script>
-
-</script>
 {% endblock %}
