--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/forum/post_detail.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/forum/post_detail.html
@@ -33,6 +33,7 @@
               <a class="btn btn-secondary btn-sm mt-2 mb-2" href="{% url 'post-update' object.subject.id object.id %}">Update</a>
               <a class="btn btn-danger btn-sm mt-2 mb-2" href="{% url 'post-delete' object.subject.id object.id %}">Delete</a>
             </div>
+            {% endif %}
           </div>
         </article>
     </div>
